syntax = "proto3";
package types;
option go_package  = ".";

message PBPayment {
  string invoiceNumber = 1; 
  string payDateTimeLtz = 2; 
  string payTimestampEpoc = 3;  
  double paid = 4;  
  string finTransactionID = 5; 
  }
